[package]
name = "cargo-dover"
version = "0.0.5"
edition = "2021"
description = "A toolkit to manage cargo project version"
readme = "readme.md"
keywords = [
    "version",
]
license = "MIT"
repository = "https://github.com/fuyoo/ver"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
regex = "1.5"